--- a/animations.html
+++ b/animations.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Animations in CSS -->
-    <div></div>
+    <div> Have fun</div>
     <button type="button" name="button">Click</button> <br><br>
     <input type="text" name="" value="">
   </body>
