--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     //alert("Welcome and JS"); // The alert function in JS
     //confirm("Are you sure you want to leave this page? "); // The confirm fuction in JS
     //prompt("Enter your name"); // The prompt function in JS
-    console.log("I have used a Console");
+    // console.log("I have used a Console");
   </script>
+  <script src="./js/index.js"></script>
 </html>
