String Method and  Conditional Statement

--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
     //prompt("Enter your name"); // The prompt function in JS
     // console.log("I have used a Console");
   </script>
-  <script src="./js/operators.js"></script>
+  <script src="./js/conditionals.js"></script>
 </html>
