--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <!-- Welcome and JS -->
   </body>
-  <script>
+  <script defer>
     //alert("Welcome and JS"); // The alert function in JS
     //confirm("Are you sure you want to leave this page? "); // The confirm fuction in JS
     //prompt("Enter your name"); // The prompt function in JS
     // console.log("I have used a Console");
   </script>
-  <script src="./js/loops.js"></script>
+  <script src="./js/functions.js"></script>
 </html>
