--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width , initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css">
     <title>Welcome & JS</title>
   </head>
   <body>
     <!-- Welcome and JS -->
-  </body>
-  <script defer>
+    <nav class="navbar" id="main-nav">
+      <ul class="navlist">
+        <li class="navitem">Home</li>
+        <li class="navitem">About</li>
+        <li class="navitem">Contact</li>
+      </ul>
+    </nav>
+    <section class="content">
+      <section class="content-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+      <section class="content-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+      <section class="content-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+    </section>
+
+
+
+    <script defer>
     //alert("Welcome and JS"); // The alert function in JS
     //confirm("Are you sure you want to leave this page? "); // The confirm fuction in JS
     //prompt("Enter your name"); // The prompt function in JS
     // console.log("I have used a Console");
-  </script>
-  <script src="./js/objects.js"></script>
+    </script>
+    <script src="./js/dom.js"></script>
+  </body>
 </html>
