Traversing the DOM

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Welcome and JS -->
-    <nav class="navbar" id="main-nav">
+    <!-- <nav class="navbar" id="main-nav">
       <ul class="navlist">
         <li class="navitem">Home</li>
         <li class="navitem">About</li>
@@ -22,8 +22,29 @@
 
       <section class="content-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
     </section>
+ -->
+ <!-- <h2 align="center"> Palindrome Program with JS</h2>
+        <form class="" name="palindrome" action="#">
+            <label for="word">Enter a word : </label>
+            <input type="text" name="word" id="palindromeWord" value="" /> <br>
+            <input type="submit" class="sbtn" name="" value="Check" />
+        </form>
+
+      <div class="result"></div> -->
 
 
+<!-- Traversing the DOM code -->
+
+      <table>
+        <thead>
+          <tr>
+            <th>Home</th>
+            <th>About</th>
+            <th>Contact</th>
+            <th>Login</th>
+          </tr>
+        </thead>
+      </table>
 
     <script defer>
     //alert("Welcome and JS"); // The alert function in JS
@@ -31,6 +52,6 @@
     //prompt("Enter your name"); // The prompt function in JS
     // console.log("I have used a Console");
     </script>
-    <script src="./js/dom.js"></script>
+    <script src="./js/palidrome.js"></script>
   </body>
 </html>
