--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width , initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Welcome & JS</title>
   </head>
   <body>
@@ -15,13 +16,6 @@
         <li class="navitem">Contact</li>
       </ul>
     </nav>
-    <section class="content">
-      <section class="content-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
-
-      <section class="content-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
-
-      <section class="content-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
-    </section>
  -->
  <!-- <h2 align="center"> Palindrome Program with JS</h2>
         <form class="" name="palindrome" action="#">
@@ -34,7 +28,7 @@
 
 
 <!-- Traversing the DOM code -->
-
+<!-- Navbar -->
       <table>
         <thead>
           <tr>
@@ -46,12 +40,46 @@
         </thead>
       </table>
 
+      <div class="alert small-text">
+        This is a an alert...ish!
+      </div>
+      <a type="button" href="#" name="button">&times;</a>
+<!-- Content Section of the website  -->
+      <section class="content">
+        <section class="content-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+        <section class="content-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+        <section class="content-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+      </section>
+
+      <section class="content">
+        <section class="content-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+        <section class="content-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+        <section class="content-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+      </section>
+      <section class="content">
+        <section class="content-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+        <section class="content-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+
+        <section class="content-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quos, natus, dolorem illo porro ipsam est totam atque quam consequuntur doloribus et debitis molestiae! Iusto nulla illum praesentium omnis autem eius dolorem in aperiam repellat tenetur recusandae magni, enim cumque eaque et, laboriosam cupiditate repudiandae obcaecati numquam officiis at dignissimos.</section>
+      </section>
+    <!-- <a download="logo.png" href="job_offer.jpg" title="Logo title">
+      <img alt="logo" src="job_offer.jpg">
+    </a> -->
+        <div class="display-5 text-center text-primary fw-bold">
+            Hello World
+        </div>
     <script defer>
     //alert("Welcome and JS"); // The alert function in JS
     //confirm("Are you sure you want to leave this page? "); // The confirm fuction in JS
     //prompt("Enter your name"); // The prompt function in JS
     // console.log("I have used a Console");
     </script>
-    <script src="./js/palidrome.js"></script>
+    <script src="./js/last_class.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
